# Masters_Clients

./: .gitignore  README.md
MastersClients/: CMakeLists.txt  main.cpp
MastersClients.xcodeproj/: project.pbxproj
MastersClients.xcodeproj/xcuserdata/dmytrokovalenko.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MastersClients.xcodeproj/xcuserdata/dmytrokovalenko.xcuserdatad/xcschemes/: xcschememanagement.plist
MastersClients/Headers/: DataBase.hpp  DataKeeper.hpp  Interface.hpp  Tables.hpp  Tools.hpp
MastersClients/Source/: DataBase.cpp  DataKeeper.cpp  Interface.cpp  Tables.cpp  Tools.cpp
